2005-08-24  Graham Percival  <gpermus@gmail.com>

	* ly/bagpipe.ly: Backport.

	* Documentation/user/ {various}: backport doc updates,
	excluding stuff for new features in 2.7.

2005-08-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (option_definitions): Don't localize
	the empty string. Fixes bug when --psfonts was used with
	non-English locale.

2005-08-15  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Instrument names):
	Document a workaround for instrument names that collide with
	system start braces/brackets.

	* scm/framework-ps.scm (output-framework): Yet another
	backport-bugfix: remove the call to paper-book-write-midis, 
	which would otherwise require a more substantial backport. 

2005-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (output-framework): Backport-bugfix: use
	2.6 interface of paper-outputter.

2005-08-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-markup-commands.scm (normal-text): Added 2 new
	markup commands, \normal-text and \medium (the latter thanks to
	Bruce Fairchild). 

2005-08-08  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/programming-interface.itely (Markup
	construction in Scheme): Corrected example and tried to clarify
	the implicit \line in the table.

2005-08-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (munge-lily-font-name): Bugfix: Munge only
	plain emmentaler/aybabtu.  Backport.

2005-08-04  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond.tely: set documentencoding utf-8.

2005-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (sane_setenv)[!ARGV0_RELOCATION]: Also define.
	(setup_guile_env): Use it instead of nonstandard setenv.  Fixes
	mingw build.  Backport.
	
2005-08-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc (shift_region_to_valid): prevent division by
	zero. Fixes beams across line breaks with 1 stem after the break.  
